--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nuxt": "3.0.0-rc.8"
   },
   "dependencies": {
-    "@nuxt/content": "^2.0.1"
+    "@nuxt/content": "^2.0.1",
+    "axios": "^0.22.0"
   }
 }
